garde/tests/rules/snapshots/rules__rules__ip__ip_any_invalid.snap
---
source: garde/tests/./rules/ip.rs
expression: snapshot
---
TestIpAny {
    field: "256.1.1.1",
    inner: [
        "256.1.1.1",
    ],
}
value.field: not a valid IP address
value.inner[0]: not a valid IP address

TestIpAny {
    field: "25.1.1.",
    inner: [
        "25.1.1.",
    ],
}
value.field: not a valid IP address
value.inner[0]: not a valid IP address

TestIpAny {
    field: "25,1,1,1",
    inner: [
        "25,1,1,1",
    ],
}
value.field: not a valid IP address
value.inner[0]: not a valid IP address

TestIpAny {
    field: "2a02::223:6cff :fe8a:2e8a",
    inner: [
        "2a02::223:6cff :fe8a:2e8a",
    ],
}
value.field: not a valid IP address
value.inner[0]: not a valid IP address


