garde/tests/rules/snapshots/rules__rules__ip__ip_v4_invalid.snap
---
source: garde/tests/./rules/ip.rs
expression: snapshot
---
TestIpV4 {
    field: "256.1.1.1",
    inner: [
        "256.1.1.1",
    ],
}
value.field: not a valid IPv4 address
value.inner[0]: not a valid IPv4 address

TestIpV4 {
    field: "25.1.1.",
    inner: [
        "25.1.1.",
    ],
}
value.field: not a valid IPv4 address
value.inner[0]: not a valid IPv4 address

TestIpV4 {
    field: "25,1,1,1",
    inner: [
        "25,1,1,1",
    ],
}
value.field: not a valid IPv4 address
value.inner[0]: not a valid IPv4 address

TestIpV4 {
    field: "25.1 .1.1",
    inner: [
        "25.1 .1.1",
    ],
}
value.field: not a valid IPv4 address
value.inner[0]: not a valid IPv4 address

TestIpV4 {
    field: "1.1.1.1\n",
    inner: [
        "1.1.1.1\n",
    ],
}
value.field: not a valid IPv4 address
value.inner[0]: not a valid IPv4 address

TestIpV4 {
    field: "٧.2٥.3٣.243",
    inner: [
        "٧.2٥.3٣.243",
    ],
}
value.field: not a valid IPv4 address
value.inner[0]: not a valid IPv4 address


