garde/tests/rules/snapshots/rules__rules__ip__ip_v6_invalid.snap
---
source: garde/tests/./rules/ip.rs
expression: snapshot
---
TestIpV6 {
    field: "foo",
    inner: [
        "foo",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address

TestIpV6 {
    field: "127.0.0.1",
    inner: [
        "127.0.0.1",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address

TestIpV6 {
    field: "12345::",
    inner: [
        "12345::",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address

TestIpV6 {
    field: "1::2::3::4",
    inner: [
        "1::2::3::4",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address

TestIpV6 {
    field: "1::zzz",
    inner: [
        "1::zzz",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address

TestIpV6 {
    field: "1:2",
    inner: [
        "1:2",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address

TestIpV6 {
    field: "fe80::223: 6cff:fe8a:2e8a",
    inner: [
        "fe80::223: 6cff:fe8a:2e8a",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address

TestIpV6 {
    field: "2a02::223:6cff :fe8a:2e8a",
    inner: [
        "2a02::223:6cff :fe8a:2e8a",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address

TestIpV6 {
    field: "::ffff:999.42.16.14",
    inner: [
        "::ffff:999.42.16.14",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address

TestIpV6 {
    field: "::ffff:zzzz:0a0a",
    inner: [
        "::ffff:zzzz:0a0a",
    ],
}
field: not a valid IPv6 address
inner[0]: not a valid IPv6 address


